tests/baselines/reference/systemExportAssignment2(target=es2015).errors.txt
error TS5107: Option 'module=System' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
a.ts(2,1): error TS1218: Export assignment is not supported when '--module' flag is 'system'.


!!! error TS5107: Option 'module=System' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== a.ts (1 errors) ====
    var a = 10;
    export = a;  // Error: export = not allowed in ES6
    ~~~~~~~~~~~
!!! error TS1218: Export assignment is not supported when '--module' flag is 'system'.
    
==== b.ts (0 errors) ====
    import * as a from "a";
    